# LeagueManager

./: .env.example  .gitignore  CREDITS.md  README.md  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PLAN.md  RESEARCH.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  league_api.rs  lib.rs  main.rs  models.rs  points.rs  results.rs  results_watcher.rs  server.rs  steam.rs
src/lib/: api.ts  pit-link.ts  session-guard.ts  types.ts
src/lib/components/brand/: Logo.svelte
src/lib/components/effects/: AmbientBackground.svelte  PitLaneBackground.svelte
src/lib/components/host/: LaunchPanel.svelte  LeagueSwitcher.svelte  ResultsPanel.svelte
src/lib/components/layout/: AppShell.svelte  RaceControlShell.svelte
src/lib/components/racing/: TelemetryTile.svelte  TimingPanel.svelte  TimingRow.svelte
src/lib/components/ui/: Avatar.svelte  Badge.svelte  Button.svelte  Card.svelte  Input.svelte
src/lib/stores/: app.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/driver/: +layout.svelte  +page.svelte
src/routes/driver/leagues/: +page.svelte
src/routes/driver/settings/: +page.svelte
src/routes/host/: +layout.svelte  +page.svelte
src/routes/host/drivers/: +page.svelte
src/routes/host/leagues/: +page.svelte
src/routes/host/settings/: +page.svelte
src/routes/login/: +page.svelte
src/routes/welcome/: +page.svelte
