[package]
name = "league-manager"
version = "0.1.0"
description = "Assetto Corsa league management desktop app"
authors = ["LeagueManager"]
edition = "2021"

[lib]
name = "league_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
axum = "0.8"
tower = "0.5"
rand = "0.8"
